--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,7 @@
-Hello World
+{% extends "base.html" %}
+{% block content %}
+<div class="jumbotron">
+    <h1>Welcome to Meek Willie's Website</h1>
+    <p>The Best Contact Form</p>
+</div>
+{% endblock %}
