--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="jumbotron">
-    <h1>Welcome to Meek Willie's Website</h1>
-    <p>The Best Contact Form</p>
+    <h1>Welcome to Master William's Website!</h1>
+    <p>Please submit your contact info!</p>
+<p><a href="{% url 'contact_create' %}" class="btn btn-lg btn-primary">Submit contact</a></p>
 </div>
 {% endblock %}
