add contacts to admin panel

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,6 @@
 <div class="jumbotron">
     <h1>Welcome to Master William's Website!</h1>
     <p>Please submit your contact info!</p>
-<p><a href="{% url 'contact_create' %}" class="btn btn-lg btn-primary">Submit contact</a></p>
+<p><a href="{% url 'contact_create' %}" class="btn btn-lg btn-info">Submit contact</a></p>
 </div>
 {% endblock %}
