Add visibility to contact form

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="jumbotron">
     <h1>Welcome to Master William's Website!</h1>
-    <p>Please submit your contact info!</p>
-<p><a href="{% url 'contact_create' %}" class="btn btn-lg btn-info">Submit contact</a></p>
+    <p>Please submit your contact information!</p>
+<p><a href="{% url 'contact_create' %}" class="btn btn-lg btn-info">Submit Contact</a></p>
 </div>
 {% endblock %}
