--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>QandU - The question-and-answer website for QU students</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
   <link href="{% static "css/base.css" %}" rel="stylesheet">
@@ -14,7 +13,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-              <a href="/" class="navbar-brand">QandU</a>
+              <a href="/" class="navbar-brand">Home</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -24,6 +23,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="{% url 'contact_create' %}">Contact Me</a></li>
+                  <li><a href="{% url 'about_create' %}">About Me</a></li>
                 </ul>
             </div>
         </div>
@@ -31,7 +31,7 @@
     <div class="container">
         {% block content %}
         {% endblock %}
-    </div>    
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
