--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="{% url 'contact_create' %}">Contact Me</a></li>
-                  <li><a href="{% url 'about_create' %}">About Me</a></li>
+                  <li><a href="{% url 'about' %}">About Me</a></li>
                 </ul>
             </div>
         </div>
